syntax = "proto3";

package data;

service DataService {
  // The client sends a stream of DataPoint messages, and the server returns a Summary.
  rpc SendData (stream DataPoint) returns (Summary);
}

message DataPoint {
  int32 id = 1;
  float value = 2;
}

message Summary {
  float average = 1;
  int32 count = 2;
}